@@ -1,41 +1,29 @@
 package no.unit.nva.handlers;
 
-import static no.unit.nva.useraccessmanagement.RestConfig.defaultRestObjectMapper;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
 import static org.hamcrest.core.IsEqual.equalTo;
 import static org.hamcrest.core.IsNot.not;
 import static org.hamcrest.core.IsNull.nullValue;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mock;
 import com.amazonaws.services.lambda.runtime.Context;
-import com.fasterxml.jackson.databind.node.ObjectNode;
-import java.io.ByteArrayOutputStream;
+import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyRequestEvent;
+import com.fasterxml.jackson.jr.ob.JSON;
 import java.io.IOException;
-import java.io.InputStream;
-import java.util.Collections;
-import no.unit.nva.testutils.HandlerRequestBuilder;
-import no.unit.nva.useraccessmanagement.exceptions.BadRequestException;
+import java.net.HttpURLConnection;
+import java.util.Map;
 import no.unit.nva.useraccessmanagement.exceptions.InvalidEntryInternalException;
 import no.unit.nva.useraccessmanagement.exceptions.InvalidInputException;
 import no.unit.nva.useraccessmanagement.model.UserDto;
-import nva.commons.apigateway.GatewayResponse;
-import nva.commons.apigateway.RequestInfo;
-import nva.commons.apigateway.exceptions.ApiGatewayException;
-import nva.commons.apigateway.exceptions.ConflictException;
-import nva.commons.apigateway.exceptions.NotFoundException;
-import nva.commons.core.Environment;
+import nva.commons.apigatewayv2.exceptions.ApiGatewayException;
+import nva.commons.apigatewayv2.exceptions.ConflictException;
 import org.apache.http.HttpStatus;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.function.Executable;
 
 class GetUserHandlerTest extends HandlerTest {
 
-    private static final String BLANK_STRING = " ";
-    private static final Environment ENVIRONMENT = new Environment();
-    private RequestInfo requestInfo;
     private Context context;
     private GetUserHandler getUserHandler;
 
@@ -52,13 +40,13 @@ class GetUserHandlerTest extends HandlerTest {
         throws ConflictException, InvalidEntryInternalException, InvalidInputException, IOException {
         insertSampleUserToDatabase();
 
-        ByteArrayOutputStream outputStream = sendGetUserRequestToHandler();
+        var request = createRequest(DEFAULT_USERNAME);
+        var response = getUserHandler.handleRequest(request, context);
 
-        GatewayResponse<ObjectNode> response = GatewayResponse.fromOutputStream(outputStream);
-        ObjectNode bodyObject = response.getBodyObject(ObjectNode.class);
+        var bodyObject = JSON.std.mapFrom(response.getBody());
 
         assertThat(bodyObject.get(TYPE_ATTRIBUTE), is(not(nullValue())));
-        String type = bodyObject.get(TYPE_ATTRIBUTE).asText();
+        String type = bodyObject.get(TYPE_ATTRIBUTE).toString();
         assertThat(type, is(equalTo(UserDto.TYPE)));
     }
 
@@ -68,66 +56,39 @@ class GetUserHandlerTest extends HandlerTest {
         assertThat(actual, is(equalTo(HttpStatus.SC_OK)));
     }
 
-    @DisplayName("processInput() returns UserDto when path parameter contains the username of an existing user")
     @Test
-    void processInputReturnsUserDtoWhenPathParameterContainsTheUsernameOfExistingUser() throws ApiGatewayException {
-        requestInfo = createRequestInfoForGetUser(DEFAULT_USERNAME);
+    void shouldReturnUserDtoWhenPathParameterContainsTheUsernameOfExistingUser()
+        throws ApiGatewayException, IOException {
+        var request = createRequest(DEFAULT_USERNAME);
         UserDto expected = insertSampleUserToDatabase();
-        UserDto actual = getUserHandler.processInput(null, requestInfo, context);
+        var response = getUserHandler.handleRequest(request, context);
+        var actual = JSON.std.beanFrom(UserDto.class, response.getBody());
 
         assertThat(actual, is(equalTo(expected)));
     }
 
-    @DisplayName("processInput() handles encoded path parameters")
     @Test
-    void processInputReturnsUserDtoWhenPathParameterContainsTheUsernameOfExistingUserEnc() throws ApiGatewayException {
+    void shouldReturnUserDtoWhenPathParameterContainsTheUsernameOfExistingUserEnc()
+        throws ApiGatewayException, IOException {
 
         String encodedUserName = encodeString(DEFAULT_USERNAME);
-        requestInfo = createRequestInfoForGetUser(encodedUserName);
+        var request = createRequest(encodedUserName);
         UserDto expected = insertSampleUserToDatabase();
-        UserDto actual = getUserHandler.processInput(null, requestInfo, context);
+        var response = getUserHandler.handleRequest(request, context);
+        var actual = JSON.std.beanFrom(UserDto.class, response.getBody());
         assertThat(actual, is(equalTo(expected)));
     }
 
-    @DisplayName("processInput() throws NotFoundException when path parameter is a string that is not an existing "
-                 + "username")
     @Test
-    void processInputThrowsNotFoundExceptionWhenPathParameterIsNonExistingUsername() {
+    void shouldReturnNotFoundExceptionWhenPathParameterIsNonExistingUsername() {
 
-        requestInfo = createRequestInfoForGetUser(DEFAULT_USERNAME);
-        Executable action = () -> getUserHandler.processInput(null, requestInfo, context);
-        assertThrows(NotFoundException.class, action);
+        var request = createRequest(DEFAULT_USERNAME);
+        var response = getUserHandler.handleRequest(request, context);
+        assertThat(response.getStatusCode(), is(equalTo(HttpURLConnection.HTTP_NOT_FOUND)));
     }
 
-    @DisplayName("processInput() throws BadRequestException when path parameter is a blank string")
-    @Test
-    void processInputThrowBadRequestExceptionWhenPathParameterIsBlank() {
-        requestInfo = createRequestInfoForGetUser(BLANK_STRING);
-        Executable action = () -> getUserHandler.processInput(null, requestInfo, context);
-        assertThrows(BadRequestException.class, action);
-    }
-
-    @DisplayName("processInput() throws BadRequestException when path parameter is null")
-    @Test
-    void processInputThrowBadRequestExceptionWhenPathParameterIsNull() {
-        requestInfo = createRequestInfoForGetUser(null);
-        Executable action = () -> getUserHandler.processInput(null, requestInfo, context);
-        assertThrows(BadRequestException.class, action);
-    }
-
-    private ByteArrayOutputStream sendGetUserRequestToHandler() throws IOException {
-        requestInfo = createRequestInfoForGetUser(DEFAULT_USERNAME);
-        InputStream inputStream = new HandlerRequestBuilder<Void>(defaultRestObjectMapper)
-            .withPathParameters(requestInfo.getPathParameters())
-            .build();
-        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
-        getUserHandler.handleRequest(inputStream, outputStream, context);
-        return outputStream;
-    }
-
-    private RequestInfo createRequestInfoForGetUser(String username) {
-        RequestInfo reqInfo = new RequestInfo();
-        reqInfo.setPathParameters(Collections.singletonMap(GetUserHandler.USERNAME_PATH_PARAMETER, username));
-        return reqInfo;
+    private APIGatewayProxyRequestEvent createRequest(String username) {
+        return new APIGatewayProxyRequestEvent()
+            .withPathParameters(Map.of(GetUserHandler.USERNAME_PATH_PARAMETER, username));
     }
 }
